--- a/plugin.xml
+++ b/plugin.xml
@@ -25,7 +25,17 @@
          <action
                class="view.MetricsAction"
                id="view.MetricsAction"
-               label="Metrics...">
+               label="Metrics: LCOM">
+         </action>
+         <action
+               class="view.MetricsActionCF"
+               id="view.MetricsActionCF"
+               label="Metrics: CF">
+         </action>
+         <action
+               class="view.MetricsActionMHF"
+               id="view.MetricsActionMHF"
+               label="Metrics: MHF">
          </action>
       </objectContribution>
    </extension>
